# DarkflameMessageBroker

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  conanfile.txt  main.cpp
src/messaging/: IMessageBroker.hpp  MessageBroker.hpp  MessageEventService.hpp
src/messaging/message/: IMessage.cpp  IMessage.hpp  Message.cpp  Message.hpp
src/messaging_old/: IMessageBroker.hpp  MessageBroker.cpp  MessageBroker.hpp
src/messaging_old/message/: IMessage.hpp  Message.hpp  MessageCallbackWrapper.hpp
test/messaging/: MessageBrokerTests.cpp  MessageEventServiceTests.cpp  MessageTests.cpp
